<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="cz.boosik.boosadminforminecraft.app.fragments.ServerAddFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etServerName" android:layout_alignParentTop="true"
            android:layout_marginTop="46dp" android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true" android:hint="@string/server_name"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etServerHost" android:layout_below="@+id/etServerName"
            android:layout_alignStart="@+id/etServerName"
            android:hint="@string/server_ip"
            android:layout_toStartOf="@+id/etQueryPort"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etServerPort" android:layout_alignBottom="@+id/etServerHost"
            android:layout_alignEnd="@+id/etServerName" android:layout_alignStart="@+id/etServerName"
            android:layout_marginStart="257dp" android:hint="@string/port"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:layout_centerVertical="true" android:layout_alignStart="@+id/etDynmapHost"
            android:layout_alignEnd="@+id/etDynmapPort"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etDynmapHost"
            android:layout_below="@+id/etQueryPort" android:layout_alignStart="@+id/etServerHost"
            android:hint="@string/dynmap_ip" android:layout_alignEnd="@+id/etQueryHost"/>
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="number"
              android:ems="10" android:id="@+id/etQueryPort"
              android:hint="@string/port"
              android:layout_below="@+id/etServerPort" android:layout_alignStart="@+id/etServerPort"/>
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="number"
              android:ems="10" android:id="@+id/etDynmapPort" android:hint="@string/port"
              android:layout_alignBottom="@+id/etDynmapHost" android:layout_alignEnd="@+id/etQueryPort"
              android:layout_alignStart="@+id/etQueryPort"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_server"
            android:id="@+id/btSave"
            android:layout_below="@+id/etPassword" android:layout_alignEnd="@+id/etPassword"
            android:layout_marginTop="27dp"/>
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/etQueryHost"
              android:hint="@string/query_ip" android:layout_alignTop="@+id/etQueryPort"
              android:layout_alignStart="@+id/etServerHost" android:layout_alignEnd="@+id/etServerHost"/>
</RelativeLayout>
